started work on table resolution